--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,13 +22,13 @@
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
-          Search
+          Add
         </ion-item>
         <ion-item menu-close href="#/app/browse">
           Browse
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
-          Playlists
+          Home
         </ion-item>
       </ion-list>
     </ion-content>
