--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Playlist">
+<ion-view view-title="Venue">
   <ion-content>
-    <h1>Playlist</h1>
+    <button class="button button-royal">Rename</button>
   </ion-content>
 </ion-view>
