--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Venue">
   <ion-content>
-    <button class="button button-royal" ng-click="rename()">Edit</button>
+    <button class="button button-royal" ng-click="edit()">Edit</button>
   </ion-content>
 </ion-view>
