Removed instantiation of playlist templates. Moved Edit button to playlists template

--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Venue">
   <ion-content>
     <button class="button button-royal" ng-click="edit()">Edit</button>
+    <div><p>{{playlist.title}}</p></div>
+    <div><p>This is a paragraph.</p></div>
   </ion-content>
 </ion-view>
