Added input field to bind to venue title

--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -6,6 +6,7 @@
 	<div>
         <span id="spanStage">{{playlist.title}}</span>
         <button class="button button-royal" ng-click="edit(playlist)">Edit</button>
+	<input ng-model='playlist.title'>
 	</div>
       </ion-item>
     </ion-list>
