--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -6,6 +6,7 @@
 	<div>
         <span id="spanStage">Venue: {{playlist.title}}</span>
         <button class="button button-royal" ng-click="edit(playlist)">Edit</button>
+        <button class="button button-energized" ng-click="remove(playlist)">Delete</button>	
 	<input ng-model='playlist.title'>
 	</div>
 	<div>
