--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,9 +21,10 @@
         <ion-item menu-close href="#/app/browse">
           Events
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
+<!--        <ion-item menu-close href="#/app/playlists">
           Venues
         </ion-item>
+-->
       </ion-list>
     </ion-content>
   </ion-side-menu>
