--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,6 +1,8 @@
 <ion-view view-title="Venue">
   <ion-content>
     <button class="button button-royal" ng-click="edit()">Edit</button>
-    <div><p>This is a paragraph. {{playlist.title}}</p></div>
+    <div class="item">
+      <p>This is a paragraph. {{playlist.title}}</p>
+    </div>
   </ion-content>
 </ion-view>
