Removed edit button and debug statements. Moved venue city to detail view

--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -5,5 +5,11 @@
       <p>{{playlist.title}}</p>
       <input ng-model='playlist.title'>
     </div>
+
+    <div>
+      <span id="spanStage2">City: {{playlist.city}}</span>
+      <input ng-model='playlist.city'>
+    </div>
+    
   </ion-content>
 </ion-view>
