Added nav bar to detail view

--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,3 +1,4 @@
+<ion-nav-bar class="bar-positive">
 <ion-view view-title="Venue">
   <ion-content>
     <button class="button button-royal" ng-click="edit()">Edit</button>
@@ -10,6 +11,7 @@
       <span id="spanStage2">City: {{playlist.city}}</span>
       <input ng-model='playlist.city'>
     </div>
-    
   </ion-content>
 </ion-view>
+</ion-nav-bar>
+
