--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,4 +1,7 @@
 <ion-nav-bar class="bar-positive">
+ <ion-nav-back-button class="button-clear">
+    <i class="ion-arrow-left-c"></i> Back
+  </ion-nav-back-button>  
 <ion-view view-title="Venue">
   <ion-content>
     <button class="button button-royal" ng-click="edit()">Edit</button>
